# LinuxCodesExample

./: .gitignore  README.md
CMakeOpenCV01/: CMakeLists.txt  CMakeOpenCV01.cpp  CMakeOpenCV01.h  CMakePresets.json
CMakeProject01/: CMakeLists.txt  CMakePresets.json  CMakeProject01.cpp  CMakeProject01.h
CMakeVSCodeTest01/: CMakeLists.txt  CMakePresets.json  hello.cpp
CMakeVSCodeTest02/: CMakeLists.txt  CMakePresets.json  main.cpp
LinuxTest01/: LinuxTest01.sln  LinuxTest01.vcxproj  Test01.cpp
